--- a/css/main.css
+++ b/css/main.css
@@ -1633,4 +1633,14 @@ video {
   transform: translate(-4px, -4px);
 }
 
+#spotlight {
+  position: fixed;
+  opacity: 1;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
 }
